2006-04-08  Alexander Olk  <alex.olk@googlemail.com>

	* Theme.cs: Added GetDashPen and GetSizedPen to SystemResPool
	* ThemeWin32Classic.cs: Make use of the new SystemResPool methods.
	  This dramatically reduces the number of Pen.Dispose calls. 
	  Where possible call ResPool methods only once instead of calling it
	  over and over again (for example for the same color).

2006-04-06  Mike Kestner  <mkestner@novell.com>

	* TabControl.cs: fix for SelectedIndex updating on TabPage removals.
	Also remove an unused private field on the collection. Fixes #77972.

2006-04-06  Alexander Olk  <alex.olk@googlemail.com>

	* ThemeNice.cs: Added ToolBar drawing code

2006-04-06  Mike Kestner  <mkestner@novell.com>

	* Form.cs (ShowDialog): MS allows IWin32Window param to be a non-form.
	I'm assuming that means we need to look up the toplevel for the
	provided control. Fixes the crash trace in #77911 but exposes another
	crash in some strange reflection usage in NDocGui.

2006-04-06  Alexander Olk  <alex.olk@googlemail.com>

	* ThemeNice.cs: Gave it a little silver touch and added Images
	  method
	* FontDialog.cs: FontDialog is not resizable
	* FileDialg.cs: Added SizeGripStyle.Show

2006-04-05  Jackson Harper  <jackson@ximian.com>

	* KeyboardLayouts.cs: Remove warning.

2006-04-05  Jackson Harper  <jackson@ximian.com>

	* Control.cs: Enable OnPaintInternal so we can use it for drawing
	all of our controls instead of Paint +=.
	* ListBox.cs:
	* ListView.cs:
	* MenuAPI.cs:
	* MessageBox.cs:
	* NotifyIcon.cs:
	* ProgressBar.cs:
	* ScrollBar.cs:
	* Splitter.cs:
	* StatusBar.cs:
	* TabControl.cs:
	* TextBoxBase.cs:
	* ToolBar.cs:
	* TrackBar.cs:
	* UpDownBase.cs:
	* ComboBox.cs: Remove handling of WM_PAINT and WM_ERASEBKGND and
	use OnPaintInternal. Remove Width/Height and Visible checks in
	paint handler, this is done at a higher level now.
	* GroupBox.cs: Don't need to handle WM_ERASEBKGND anymore.
	* PaintEventArgs.cs: Add a handled flag so controls that don't